--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,3 +1,5 @@
 <app-header-componant/>
-<router-outlet></router-outlet>
+<div class="main-content">
+  <router-outlet></router-outlet>
+</div>
 <app-footer-componant/>
