--- a/frontend/src/app/componant/file-article/file-article.html
+++ b/frontend/src/app/componant/file-article/file-article.html
@@ -6,7 +6,7 @@
     </div>
   }
   <div class="articles">
-    <app-article *ngFor="let article of articles" [article]="article" (edit)="openEdit($event)"></app-article>
+    <app-article *ngFor="let article of sortedArticles; let i = index" [article]="article" [index]="i" (edit)="openEdit($event)"></app-article>
   </div>
 
   @if (showCompose) {
