--- a/frontend/src/app/pages/accueil/accueil-page.component.html
+++ b/frontend/src/app/pages/accueil/accueil-page.component.html
@@ -1,2 +1,6 @@
-<app-file-article [articles]="articles" />
+<app-file-article
+  [articles]="articles"
+  (articleSaved)="onArticleSaved($event)"
+  (articleDeleted)="onArticleDeleted($event)"
+/>
 
