implementation gestion de role

--- a/frontend/src/app/componant/menu/menu.html
+++ b/frontend/src/app/componant/menu/menu.html
@@ -38,9 +38,9 @@
              class="menu__link">Edit Section</a>
         </li>
         <li class="menu__item" id="admin-menu-role">
-          <a [routerLink]="'/admin/edit-role'" 
+          <a [routerLink]="'/admin/edit-users'" 
              routerLinkActive="menu__link--active"
-             class="menu__link">Edit Role</a>
+             class="menu__link">Edit Users</a>
         </li>
         <li class="menu__item" id="admin-menu-site">
           <a [routerLink]="'/admin/edit-site'"
