--- a/frontend/src/app/pages/admin-edit-users/admin-edit-users.component.html
+++ b/frontend/src/app/pages/admin-edit-users/admin-edit-users.component.html
@@ -1,5 +1,5 @@
 <div class="admin-page">
-  <h1>Gestion des rôles</h1>
+  <h1>Gestion des Utilisateurs</h1>
 
   <div *ngIf="loading">Chargement...</div>
   <div *ngIf="error" class="error">{{ error }}</div>
